# python-clean-architecture-project

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  config.py  docker-compose.dev.yaml  docker-compose.yaml  main.py  pyproject.toml  run.sh
config/: .env.example  settings.toml
examples/external_authentication_service_webhook_crud/keycloak/: create_webhook.http  delete_webhook.http
external_authentication_service_webhook_crud/keycloak/: list_webhooks.http
internal/app/: __init__.py  middlewares.py  servers.py
internal/controllers/http/payloads/: post.py  (+2 more)
internal/controllers/responses/: __init__.py  base.py
internal/domains/constants/: __init__.py  authentication.py  v1_authorization.py
internal/domains/entities/: __init__.py  authentication.py  authorization.py  comment.py  post.py  user.py
internal/domains/errors/: __init__.py  authentication.py  authorization.py  comment.py  post.py  user.py
internal/domains/services/: __init__.py  authentication.py  comment.py  post.py  user.py
internal/domains/usecases/: __init__.py  authentication.py  authorization.py  comment.py  post.py  user.py
internal/infrastructures/authentication_service/: __init__.py
internal/infrastructures/config_manager/: __init__.py
internal/infrastructures/external_authentication_service/: __init__.py
internal/infrastructures/external_rebac_authorization_service/: __init__.py
internal/infrastructures/relational_db/: __init__.py
internal/patterns/: __init__.py  dependency_injection.py
utils/: logger_utils.py  string_utils.py  time_utils.py
(+56 files in other folders)
